Add staking API.
