# proto/prototype/service.pb.go
@@ -8,6 +8,7 @@ package prototype
 
 import (
 	_ "github.com/envoyproxy/protoc-gen-validate/validate"
+	_ "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2/options"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
@@ -544,6 +545,9 @@ var file_prototype_service_proto_rawDesc = []byte{
 	0x70, 0x65, 0x2f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x26,
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x2f, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x2e,
 	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x72, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x63, 0x2d, 0x67,
+	0x65, 0x6e, 0x2d, 0x6f, 0x70, 0x65, 0x6e, 0x61, 0x70, 0x69, 0x76, 0x32, 0x2f, 0x6f, 0x70, 0x74,
+	0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73,
 	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x34, 0x0a, 0x0e, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73,
 	0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x22, 0x0a, 0x07, 0x61, 0x64, 0x64, 0x72,
 	0x65, 0x73, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x08, 0xfa, 0x42, 0x05, 0x72, 0x03,
@@ -583,7 +587,7 @@ var file_prototype_service_proto_rawDesc = []byte{
 	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x62, 0x61, 0x6c,
 	0x61, 0x6e, 0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x07, 0x62, 0x61, 0x6c, 0x61,
 	0x6e, 0x63, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x32, 0xa0, 0x05, 0x0a, 0x11, 0x52, 0x61,
+	0x28, 0x09, 0x52, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x32, 0x96, 0x06, 0x0a, 0x11, 0x52, 0x61,
 	0x69, 0x64, 0x6f, 0x43, 0x68, 0x61, 0x69, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12,
 	0x67, 0x0a, 0x07, 0x47, 0x65, 0x74, 0x55, 0x54, 0x78, 0x4f, 0x12, 0x1b, 0x2e, 0x72, 0x64, 0x6f,
 	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73,
@@ -625,17 +629,54 @@ var file_prototype_service_proto_rawDesc = []byte{
 	0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
 	0x73, 0x65, 0x22, 0x28, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x22, 0x12, 0x20, 0x2f, 0x72, 0x64, 0x6f,
 	0x2f, 0x76, 0x31, 0x2f, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x2f, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61,
-	0x63, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x7b, 0x68, 0x61, 0x73, 0x68, 0x7d, 0x32, 0x7b, 0x0a, 0x12,
-	0x41, 0x74, 0x74, 0x65, 0x73, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x69,
-	0x63, 0x65, 0x12, 0x65, 0x0a, 0x06, 0x53, 0x65, 0x6e, 0x64, 0x54, 0x78, 0x12, 0x1a, 0x2e, 0x72,
+	0x63, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x7b, 0x68, 0x61, 0x73, 0x68, 0x7d, 0x12, 0x74, 0x0a, 0x10,
+	0x47, 0x65, 0x74, 0x53, 0x74, 0x61, 0x6b, 0x65, 0x44, 0x65, 0x70, 0x6f, 0x73, 0x69, 0x74, 0x73,
+	0x12, 0x1b, 0x2e, 0x72, 0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x41,
+	0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e,
+	0x72, 0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x55, 0x54, 0x78, 0x4f,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x28, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x22,
+	0x12, 0x20, 0x2f, 0x72, 0x64, 0x6f, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x2f,
+	0x64, 0x65, 0x70, 0x6f, 0x73, 0x69, 0x74, 0x73, 0x2f, 0x7b, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73,
+	0x73, 0x7d, 0x32, 0xf0, 0x02, 0x0a, 0x12, 0x41, 0x74, 0x74, 0x65, 0x73, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x72, 0x0a, 0x0c, 0x53, 0x65, 0x6e,
+	0x64, 0x4c, 0x65, 0x67, 0x61, 0x63, 0x79, 0x54, 0x78, 0x12, 0x1a, 0x2e, 0x72, 0x64, 0x6f, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x53, 0x65, 0x6e, 0x64, 0x54, 0x78, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x72, 0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x2a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x24, 0x22, 0x1f, 0x2f, 0x72, 0x64, 0x6f, 0x2f,
+	0x76, 0x31, 0x2f, 0x61, 0x74, 0x74, 0x65, 0x73, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x73,
+	0x65, 0x6e, 0x64, 0x2f, 0x6c, 0x65, 0x67, 0x61, 0x63, 0x79, 0x3a, 0x01, 0x2a, 0x12, 0x70, 0x0a,
+	0x0b, 0x53, 0x65, 0x6e, 0x64, 0x53, 0x74, 0x61, 0x6b, 0x65, 0x54, 0x78, 0x12, 0x1a, 0x2e, 0x72,
 	0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x53, 0x65, 0x6e, 0x64, 0x54,
 	0x78, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x72, 0x64, 0x6f, 0x2e, 0x73,
 	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x23, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1d, 0x22, 0x18, 0x2f, 0x72,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x29, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x23, 0x22, 0x1e, 0x2f, 0x72,
 	0x64, 0x6f, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x74, 0x74, 0x65, 0x73, 0x74, 0x61, 0x74, 0x69, 0x6f,
-	0x6e, 0x2f, 0x73, 0x65, 0x6e, 0x64, 0x3a, 0x01, 0x2a, 0x42, 0x17, 0x5a, 0x15, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x2f, 0x2e, 0x3b, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79,
-	0x70, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6e, 0x2f, 0x73, 0x65, 0x6e, 0x64, 0x2f, 0x73, 0x74, 0x61, 0x6b, 0x65, 0x3a, 0x01, 0x2a, 0x12,
+	0x74, 0x0a, 0x0d, 0x53, 0x65, 0x6e, 0x64, 0x55, 0x6e, 0x73, 0x74, 0x61, 0x6b, 0x65, 0x54, 0x78,
+	0x12, 0x1a, 0x2e, 0x72, 0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x53,
+	0x65, 0x6e, 0x64, 0x54, 0x78, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x72,
+	0x64, 0x6f, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x2b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x25,
+	0x22, 0x20, 0x2f, 0x72, 0x64, 0x6f, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x74, 0x74, 0x65, 0x73, 0x74,
+	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x73, 0x65, 0x6e, 0x64, 0x2f, 0x75, 0x6e, 0x73, 0x74, 0x61,
+	0x6b, 0x65, 0x3a, 0x01, 0x2a, 0x42, 0x80, 0x02, 0x5a, 0x15, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74,
+	0x79, 0x70, 0x65, 0x2f, 0x2e, 0x3b, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x74, 0x79, 0x70, 0x65, 0x92,
+	0x41, 0xe5, 0x01, 0x12, 0x40, 0x0a, 0x14, 0x52, 0x61, 0x69, 0x64, 0x6f, 0x20, 0x62, 0x6c, 0x6f,
+	0x63, 0x6b, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x20, 0x41, 0x50, 0x49, 0x12, 0x23, 0x4a, 0x53, 0x4f,
+	0x4e, 0x20, 0x52, 0x45, 0x53, 0x54, 0x20, 0x41, 0x50, 0x49, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x52,
+	0x61, 0x69, 0x64, 0x6f, 0x20, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x63, 0x68, 0x61, 0x69, 0x6e, 0x2e,
+	0x32, 0x03, 0x31, 0x2e, 0x30, 0x1a, 0x0e, 0x6c, 0x6f, 0x63, 0x61, 0x6c, 0x68, 0x6f, 0x73, 0x74,
+	0x3a, 0x35, 0x35, 0x35, 0x35, 0x2a, 0x01, 0x01, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63,
+	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x32, 0x19, 0x61, 0x70, 0x70, 0x6c,
+	0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2d, 0x77, 0x65, 0x62,
+	0x2d, 0x74, 0x65, 0x78, 0x74, 0x32, 0x19, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x6a, 0x73, 0x6f, 0x6e,
+	0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73,
+	0x6f, 0x6e, 0x3a, 0x19, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f,
+	0x67, 0x72, 0x70, 0x63, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x74, 0x65, 0x78, 0x74, 0x3a, 0x19, 0x61,
+	0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2d,
+	0x77, 0x65, 0x62, 0x2d, 0x6a, 0x73, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -679,16 +720,22 @@ var file_prototype_service_proto_depIdxs = []int32{
 	2,  // 7: rdo.service.RaidoChainService.GetBlockByHash:input_type -> rdo.service.HashRequest
 	0,  // 8: rdo.service.RaidoChainService.GetBalance:input_type -> rdo.service.AddressRequest
 	2,  // 9: rdo.service.RaidoChainService.GetTransaction:input_type -> rdo.service.HashRequest
-	5,  // 10: rdo.service.AttestationService.SendTx:input_type -> rdo.service.SendTxRequest
-	3,  // 11: rdo.service.RaidoChainService.GetUTxO:output_type -> rdo.service.UTxOResponse
-	4,  // 12: rdo.service.RaidoChainService.GetStatus:output_type -> rdo.service.StatusResponse
-	7,  // 13: rdo.service.RaidoChainService.GetBlockByNum:output_type -> rdo.service.BlockResponse
-	7,  // 14: rdo.service.RaidoChainService.GetBlockByHash:output_type -> rdo.service.BlockResponse
-	9,  // 15: rdo.service.RaidoChainService.GetBalance:output_type -> rdo.service.BalanceResponse
-	8,  // 16: rdo.service.RaidoChainService.GetTransaction:output_type -> rdo.service.TransactionResponse
-	6,  // 17: rdo.service.AttestationService.SendTx:output_type -> rdo.service.ErrorResponse
-	11, // [11:18] is the sub-list for method output_type
-	4,  // [4:11] is the sub-list for method input_type
+	0,  // 10: rdo.service.RaidoChainService.GetStakeDeposits:input_type -> rdo.service.AddressRequest
+	5,  // 11: rdo.service.AttestationService.SendLegacyTx:input_type -> rdo.service.SendTxRequest
+	5,  // 12: rdo.service.AttestationService.SendStakeTx:input_type -> rdo.service.SendTxRequest
+	5,  // 13: rdo.service.AttestationService.SendUnstakeTx:input_type -> rdo.service.SendTxRequest
+	3,  // 14: rdo.service.RaidoChainService.GetUTxO:output_type -> rdo.service.UTxOResponse
+	4,  // 15: rdo.service.RaidoChainService.GetStatus:output_type -> rdo.service.StatusResponse
+	7,  // 16: rdo.service.RaidoChainService.GetBlockByNum:output_type -> rdo.service.BlockResponse
+	7,  // 17: rdo.service.RaidoChainService.GetBlockByHash:output_type -> rdo.service.BlockResponse
+	9,  // 18: rdo.service.RaidoChainService.GetBalance:output_type -> rdo.service.BalanceResponse
+	8,  // 19: rdo.service.RaidoChainService.GetTransaction:output_type -> rdo.service.TransactionResponse
+	3,  // 20: rdo.service.RaidoChainService.GetStakeDeposits:output_type -> rdo.service.UTxOResponse
+	6,  // 21: rdo.service.AttestationService.SendLegacyTx:output_type -> rdo.service.ErrorResponse
+	6,  // 22: rdo.service.AttestationService.SendStakeTx:output_type -> rdo.service.ErrorResponse
+	6,  // 23: rdo.service.AttestationService.SendUnstakeTx:output_type -> rdo.service.ErrorResponse
+	14, // [14:24] is the sub-list for method output_type
+	4,  // [4:14] is the sub-list for method input_type
 	4,  // [4:4] is the sub-list for extension type_name
 	4,  // [4:4] is the sub-list for extension extendee
 	0,  // [0:4] is the sub-list for field type_name
